src/styles/global.css
@import "tailwindcss";


@import '@fontsource/barlow-condensed/700';
@import '@fontsource/barlow-condensed/400';


@theme {
  --color-dark-grey: #171A1C;
  --color-light-grey: #e6e6e6;
  --color-yellow: #F8F400;
  --color-red: #FF0B37;
  --color-pink: #F80084;
  --color-blue: #1D00F7;

  --shadow-main:
    0px 1px 2px rgba(0, 0, 0, 0.3),
    0px 1px 12px 1px rgba(0, 0, 0, 0.15);

  --color-background: var(--color-light-grey);
  --color-foreground: var(--color-dark-grey);
  --color-primary: var(--color-red);
  --color-accent: var(--color-dark-grey);
  --color-logo: var(--color-foreground);

}

/* @media (prefers-color-scheme: dark) { */
/*   :root { */
/*     --color-background: var(--color-dark-grey); */
/*     --color-foreground: var(--color-light-grey); */
/*     --color-primary: var(--color-yellow); */
/*     --color-accent: var(--color-red); */
/*     --color-logo: var(--color-primary); */
/*   } */
/* } */

html,
body {
	margin: 0; width: 100%;
	height: 100%;
}

body {
  font-family: 'Barlow Condensed' , 'sans-serif';
}


  @keyframes gradient-animation {
    0% { background-position: 0% 0%; }
    100% { background-position: 00% 200%; }
  }

  .animate-gradient-flow {
     animation: gradient-animation 3s linear infinite;
     background-size: 200% 200%; /* Important for smooth movement */
    }

